proj1/tests/other-tests/oskis-angels_tests/regexperts_tests/correct/ctrl_nested.py
for x in range(1, 5):
  y = 1
  while y < 5:
    if x == y:
      print 'x = y'
    else:
      print 'x != y'
    y = y + 1
