proj1/tests/other-tests/oskis-angels_tests/regexperts_tests/error/plus_equals.py
def foo(x):
	while (x < 10):
		x += 1
	return x

foo(5)